--- a/CoputerShop/Pages/Cart.xaml
+++ b/CoputerShop/Pages/Cart.xaml
@@ -16,91 +16,100 @@
 
         <Grid Grid.Column="0">
             <StackPanel>
-                <Button x:Name="b_user" Content="Пользователь" Width="200" Height="30" Margin="5"/>
-                <Button x:Name="b_shop" Content="Магазин" Width="200" Height="30" Margin="5"/>
+                <Button x:Name="b_user" Content="Пользователь" Width="200" Height="30" Margin="5" Click="b_user_Click"/>
+                <Button x:Name="b_shop" Content="Магазин" Width="200" Height="30" Margin="5" Click="b_shop_Click"/>
+                <Label Margin="5" x:Name="l_whole_price" Width="200" Height="30"/>
+                <Label Margin="5" x:Name="l_retail_price" Width="200" Height="30"/>
+                <Button x:Name="b_done" Content="Оплатить" Width="200" Height="30" Margin="5" Click="b_done_Click"/>
+                <Button x:Name="logs" Content="Логи" Width="200" Height="30" Margin="5" Click="logs_Click"/>
             </StackPanel>
         </Grid>
         
         <Grid Grid.Column="1">
-            <ListView x:Name="l_cartList" Margin="5" Width="730" Height="480" VerticalAlignment="Center">
+            <ListView x:Name="l_cartList" Margin="5" Width="710" Height="440" VerticalAlignment="Top">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="150"/>
-                                <ColumnDefinition Width="150"/>
-                                <ColumnDefinition Width="150"/>
-                                <ColumnDefinition Width="150"/>
-                            </Grid.ColumnDefinitions>
+                        <Border BorderThickness="1" BorderBrush="Black" CornerRadius="25">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="110"/>
+                                    <ColumnDefinition Width="180"/>
+                                    <ColumnDefinition Width="210"/>
+                                    <ColumnDefinition Width="160"/>
+                                </Grid.ColumnDefinitions>
 
-                            <StackPanel Grid.Column="0">
-                                <TextBlock>
+                                <StackPanel Grid.Column="0">
+                                    <TextBlock>
                                         <Image Source=""/>
-                                </TextBlock>
-                            </StackPanel>
-
-                            <StackPanel Grid.Column="1" Orientation="Vertical">
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock>
-                                        <Run Text=""/>
-                                        <Run Text=" | "/>
-                                        <Run Text=""/>
                                     </TextBlock>
                                 </StackPanel>
 
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock>
-                                        <Run Text="Производитель: " FontWeight="Bold"/>
-                                        <Run Text=""/>
-                                    </TextBlock>
+                                <StackPanel Grid.Column="1" Orientation="Vertical">
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock>
+                                            <Run Text="{Binding Products.ProductTypes.product_type_name}"/>
+                                            <Run Text=" | "/>
+                                            <Run Text="{Binding Products.product_name}"/>
+                                        </TextBlock>
+                                    </StackPanel>
+
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock>
+                                            <Run Text="Производитель: " FontWeight="Bold"/>
+                                            <Run Text="{Binding Products.ProductCreators.product_creator_name}"/>
+                                        </TextBlock>
+                                    </StackPanel>
+
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock>
+                                            <Run Text="Поставщик: " FontWeight="Bold"/>
+                                            <Run Text="{Binding Products.ProductSellers.product_seller_name}"/>
+                                        </TextBlock>
+                                    </StackPanel>
+
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock>
+                                            <Run Text="Розничная цена: " FontWeight="Bold"/>
+                                            <Run Text="{Binding Products.product_retail_price}"/>
+                                            <Run Text=" руб."/>
+                                        </TextBlock>
+                                    </StackPanel>
+
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock>
+                                            <Run Text="Оптовая цена: " FontWeight="Bold"/>
+                                            <Run Text="{Binding Products.product_wholesale_price}"/>
+                                            <Run Text=" руб."/>
+                                        </TextBlock>
+                                    </StackPanel>
+
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock>
+                                            <Run Text="Статус товара: " FontWeight="Bold"/>
+                                            <Run Text="{Binding Products.ProductStatuses.product_status_name}"/>
+                                        </TextBlock>
+                                    </StackPanel>
                                 </StackPanel>
 
-                                <StackPanel Orientation="Horizontal">
+                                <StackPanel Grid.Column="2">
                                     <TextBlock>
-                                        <Run Text="Поставщик: " FontWeight="Bold"/>
-                                        <Run Text=""/>
-                                    </TextBlock>
-                                </StackPanel>
-                            </StackPanel>
-
-                            <StackPanel Grid.Column="2">
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock>
-                                        <Run Text="Розничная цена: " FontWeight="Bold"/>
-                                        <Run Text=""/>
-                                    </TextBlock>
-                                </StackPanel>
-
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock>
-                                        <Run Text="Оптовая цена: " FontWeight="Bold"/>
-                                        <Run Text=""/>
-                                    </TextBlock>
-                                </StackPanel>
-
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock>
-                                        <Run Text="Статус товара: " FontWeight="Bold"/>
-                                        <Run Text=""/>
-                                    </TextBlock>
-                                </StackPanel>
-                            </StackPanel>
-
-                            <StackPanel Grid.Column="3">
-                                <TextBlock>
                                         <Run Text="Описание: " FontWeight="Bold"/>
-                                        <Run Text=""/>
-                                </TextBlock>
-                                <Button x:Name="b_del_from_cart" Content="В корзину" Width="200" Height="30" Margin="5"/>
-                                <StackPanel Orientation="Horizontal">
-                                    <Button x:Name="b_less" Content="-" Width="30" Height="30" Margin="5"/>
-                                    <TextBlock>
-                                            <Run Text=""/>
+                                        <Run Text="{Binding Products.product_description}"/>
                                     </TextBlock>
-                                    <Button x:Name="b_more" Content="+" Width="30" Height="30" Margin="5"/>
                                 </StackPanel>
-                            </StackPanel>
-                        </Grid>
+
+                                <StackPanel Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical">
+                                    <Button x:Name="b_del_from_cart" Content="Убрать из корзины" Width="140" Height="30" Margin="5" Click="b_del_from_cart_Click"/>
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                        <Button x:Name="b_less" Content="-" Width="30" Height="30" Margin="5" Click="b_less_Click"/>
+                                        <TextBlock Margin="5" VerticalAlignment="Center" Width="30" Height="30" HorizontalAlignment="Center">
+                                            <Run Text="{Binding sell_product_count}"/>
+                                        </TextBlock>
+                                        <Button x:Name="b_more" Content="+" Width="30" Height="30" Margin="5" Click="b_more_Click"/>
+                                    </StackPanel>
+                                </StackPanel>
+                            </Grid>
+                        </Border>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
